# tclclockmod

./: .gitignore  .gitmodules  .travis.yml  Makefile.in  README  README.Linux  README.md  aclocal.m4  configure  configure.ac  pkgIndex.tcl.in
.github/workflows/: ci-nix.yml  linux-ci.yml
doc/: clock.n
generic/: tclClock.c  tclClockFmt.c  tclClockMod.c  tclClockModInt.c  tclClockModInt.h  tclDate.c  tclDate.h  tclGetDate.y  tclStrIdxTree.c  tclStrIdxTree.h
lib/: clock.tcl  clock.tcl.in  loader.tcl
tests/: all.tcl  clock.test
tests-perf/: clock.perf.tcl  test-performance.tcl
unix/: README
win/: README.md  README.txt  makefile.vc  pkg.vc  rules.vc  tclclockmod.dsp  tclclockmod.dsw  tclclockmod.rc  tclclockmod.sln  tclclockmod.vcproj
